# Jaxlie-SE3-Traj

./: README.md  example.py  example_tilt_torsion_full.py  example_utils.py  pyproject.toml
src/jaxlie_se3_traj/: __init__.py  bump_method.py  se3_delta_segments.py  se3_trajectory.py  seven_seg_s_curve.py
