[project]
name = "jaxlie-se3-traj"
version = "0.0.2"
description = "A collection of SE3 trajectories. With differentiable SE3 implementation from jaxlie"
authors = [
    { name = "Yifei Liu", email = "34564223+EzekielDaun@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jaxlie (>=1.5.0,<2.0.0)", "jaxtyping (>=0.3.2,<0.4.0)"]


[tool.poetry]
packages = [{ include = "jaxlie_se3_traj", from = "src" }]


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
